# bastbanpem

./: .geminiignore  .gitignore  AGENTS.md  ARCHITECTURE_SOTA.md  CLAUDE.md  DATA_MODELS.md  GEMINI.md  INDEX.md  LESSONS.md  MODALS_AND_FORMS.md  PROJECT.md  PROJECT_MAP.md  PROJECT_STATE.md  README.md  ROADMAP.md  SCAN_SUMMARY.md  SESSION_LOG.md  STATE.md  USER_GUIDE.md  bastbanpem_vault.db  bastbanpem_vault.db-shm  bastbanpem_vault.db-wal  complete_detail_audit.json  consolidated_context.xml  debug.bat  deep_dive_kontrak.json  dev.bat  distribution_edit_schema.json  extract_pdf.mjs  fetch_master_data.cjs  import_template_final.json  import_template_schema.json  index.html  license_asd.lic  package-lock.json  package.json  pdf_extract_utf8.txt  pdf_pattern_learner.py  portal_schema.json  portal_session.json  (+22 more)
.claude/: current-task.md  design-system.md  launch.json  settings.local.json
.serena/: project.yml
App_Data/: bastbanpem_vault.db
backend/: config.py  db.py  exceptions.py  main.py  models.py  test_address_hardening.py
docs/: manual_book_text.txt
output/: extracted_pdf_data.json  final_beneficiaries.json  ktp_expert_benchmark.json  parsed_contracts.json  pattern_report.json
scratch/: analyze_pdfs.cjs  analyze_pdfs.py  check_pdf.js  debug_headers.py  debug_server.py  debug_sskk.py  debug_sskk_extraction.py  debug_sskk_plumber.py  debug_tables.py  debug_weights.py  diagnose_full.py  diagnose_jadwal.py  edge_case_tests.py  excel_inspection.json  (+12 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
(+207 files in other folders)
